<resources>
    <string name="app_name">SwooshApp</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="all_out">ON GOING ALL OUT</string>
    <string name="find"><![CDATA[Find a team in your city & dominate the league]]></string>
    <string name="get_started">GET STARTED</string>
    <string name="desired_league">Desired League:</string>
    <string name="mens_">Mens</string>
    <string name="womens_">Womens</string>
    <string name="co_ed_">Co-ed</string>
    <string name="next">NEXT</string>
    <string name="i_am_a">I am a:</string>
    <string name="baller">Baller</string>
    <string name="beginner">Beginner</string>
</resources>
